# IceBERT-PoS

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/icebert_pos/: __init__.py  cli.py  interface.py
tests/: conftest.py  test_cli.py  test_pos_tagging.py  test_readme.py
