[project]
name = "icebert-pos"
version = "0.1.0"
description = "A package for interacting with the IceBERT PoS model(s)."
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "tokenizer>=3.4.4,<4.0",
    "transformers>=4.46.3,<5.0",
    "rich>=13.0.0,<14.0",
    "torch>=2.0.0,<3.0",
]

[project.scripts]
icebert-pos = "icebert_pos.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff"]

[tool.ruff]
line-length = 120

# "some" build system
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
